<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rocks.athrow.android_court_counter_app.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/teams_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/divideColor"
            android:baselineAligned="false"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/team_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/divideColor"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/team1_name"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_1_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/score_start"
                    android:textSize="64sp"
                    android:textStyle="bold" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <Button
                        android:id="@+id/team_1_points1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_1" />

                    <Button
                        android:id="@+id/team_1_points2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_2" />

                    <Button
                        android:id="@+id/team_1_points3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_3" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_2_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/divideColor"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/team2_name"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_2_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/score_start"
                    android:textSize="64sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <Button
                        android:id="@+id/team_2_points1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_1" />

                    <Button
                        android:id="@+id/team_2_points2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_2" />

                    <Button
                        android:id="@+id/team_2_points3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_3" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_marginTop="32dp"
            android:id="@+id/reset_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>
</ScrollView>
